Implement fallbacks for when the drawable doesn't have enough width.
Also:
  - For better clarity, renamed `processAndConvertToViewParts` to
    `processModelAndConvertToViewParts`, and
    `processAndConvertToDrawableParts` to
    `processPartsAndConvertToDrawableParts`.
  - Fixed pre-existing failures in NotificationProgressModelTest. And a
    few tests were failing the verifs on process or indeterminateColor.
  - Cleaned up / reassigned a couple of TODOs.

Test notification config, on Felix:
  - 10 segments, each of length 10
    - Case 1: segments of multiple colors
    - Case 2: segments of same color
  - 4 points, at 0, 1, 55, 100

Flag: android.app.api_rich_ongoing
Fix: 372908709
Bug: 390196782
Test: Post ProgressStyle notifs via test app
Test: atest NotificationProgressBarTest
Test: atest NotificationProgressModelTest
Change-Id: I57333e2c14058298b5caf707442176883162b345